--- a/src/proyecto_edd/VentanaM.form
+++ b/src/proyecto_edd/VentanaM.form
@@ -194,6 +194,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Ver cobertura sucursal (Busqueda en Amplitud)"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchBFSActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="20" y="220" width="-1" height="-1"/>
