--- a/src/proyecto_edd/VentanaM.form
+++ b/src/proyecto_edd/VentanaM.form
@@ -90,7 +90,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="displayGrafo">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Mostrar Grafo*"/>
+            <Property name="text" type="java.lang.String" value="Mostrar Grafo"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="displayGrafoActionPerformed"/>
@@ -164,10 +164,13 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JToggleButton" name="jToggleButton1">
+        <Component class="javax.swing.JToggleButton" name="saveFile">
           <Properties>
             <Property name="text" type="java.lang.String" value="Guardar Archivo*"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="saveFileActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="510" y="310" width="-1" height="-1"/>
