--- a/src/proyecto_edd/VentanaM.form
+++ b/src/proyecto_edd/VentanaM.form
@@ -164,22 +164,9 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JToggleButton" name="saveFile">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Guardar Archivo*"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="saveFileActionPerformed"/>
-          </Events>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="510" y="310" width="-1" height="-1"/>
-            </Constraint>
-          </Constraints>
-        </Component>
         <Component class="javax.swing.JToggleButton" name="cTotal">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Revisar Cobertura total*"/>
+            <Property name="text" type="java.lang.String" value="Revisar Cobertura total"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cTotalActionPerformed"/>
